@@ -6,8 +6,9 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 
 =head2 Changes in Devel::NYTProf 2.02
 
-  Use clock_gettime if available for 100ns resolution
-    Uses CLOCK_MONOTONIC if available else CLOCK_REALTIME
+  Uses clock_gettime() if available for 100ns resolution.
+	Uses CLOCK_MONOTONIC if available else CLOCK_REALTIME.
+  Deducts statement measurement overheads from inclusive subroutine time.
 
 =head2 Changes in Devel::NYTProf 2.01
 
